// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalContent renders correctly with cancel text 1`] = `
<div
  className="container directionRow justifyEnd alignCenter"
  style={
    Object {
      "gap": "12px",
    }
  }
>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="monday-style-button monday-style-button--size-medium monday-style-button--kind-secondary monday-style-button--color-primary"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    Cancel
  </button>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="monday-style-button monday-style-button--size-medium monday-style-button--kind-primary monday-style-button--color-primary"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    cancel
  </button>
</div>
`;

exports[`ModalContent renders correctly with children 1`] = `
<div
  className="container"
>
  <div>
    children
  </div>
</div>
`;

exports[`ModalContent renders correctly with confirm text 1`] = `
<div
  className="container directionRow justifyEnd alignCenter"
  style={
    Object {
      "gap": "12px",
    }
  }
>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="monday-style-button monday-style-button--size-medium monday-style-button--kind-secondary monday-style-button--color-primary"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    Cancel
  </button>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="monday-style-button monday-style-button--size-medium monday-style-button--kind-primary monday-style-button--color-primary"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    test
  </button>
</div>
`;

exports[`ModalContent renders correctly with empty props 1`] = `
<div
  className="container"
/>
`;
